# audiorename

./: .gitattributes  .gitignore  .python-version  .readthedocs.yml  .travis.yml  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README_footer.rst  README_header.rst  README_template.rst  _generate-readme.py  audiorename.py  beets-rename.py  description  example-config.ini  functemplate.py  functions.py  generate-readme.sh  mediafile.py  mutagen-rename.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  test.sh  test_pyexpander.py  tox.ini
.github/workflows/: main.yml  publish-to-pypi.yml  test.yml  tests.yml
audiorename/: __init__.py  _version.py  _version.pyi  args.py  audiofile.py  batch.py  bundler.py  config.py  example-config.ini  job.py  message.py  meta.py  meta_ng.py  musicbrainz.py  query.py  rename.py  utils.py
doc/source/: audiorename.rst  cli.rst  conf.py  index.rst  modules.rst
docs/: audiorename.rst  cli.rst  conf.py  index.rst  modules.rst  requirements.in  requirements.txt
examples/: projectmusic.py  rename_music.py
src/audiorename/: __init__.py  args.py  audiofile.py  batch.py  message.py  meta.py  musicbrainz.py
test/: config-args-merge.py  helper.py  test.py  test_all_fields.py  test_args.py  test_audiofile.py  test_batch.py  test_cli_options.py  test_config.py  test_executable.py  test_init.py  test_job.py  test_message.py  test_meta.py  test_meta_ng.py  test_musicbrainz.py  test_query.py  test_rename.py  test_tmep_integration.py
test/blank/: bank.opus  bank.wv  blank.flac
test/files/blank/: blank.m4a  blank.wma
test/files/config/: all-true.ini  minimal.ini
test/files/mixed_formats/: 01.flac
test/files/performers/: blank.opus  blank.wv
test/performers/: blank.alac.m4a  blank.flac  full.alac.m4a  full.flac  full.m4a  full.opus
test/quality/: m4a_250.m4a
test/real-world/: README.md
tests/: helper.py  test_all_fields.py  test_args.py  test_audiofile.py  test_batch.py  test_cli_options.py  test_executable.py  test_init.py  test_job.py  test_message.py  test_meta.py  test_musicbrainz.py  test_tmep_integration.py
tests/files/blank/: blank.aiff  blank.alac.m4a
tests/files/config/: all-true.ini
tests/files/mixed_formats/: 02.m4a
tests/files/performers/: blank.m4a  blank.wma
tests/files/quality/: flac.flac  m4a_100.m4a
typings/ansicolor/: __init__.pyi  ansicolor.pyi  demos.pyi
typings/musicbrainzngs/: __init__.pyi  caa.pyi  compat.pyi  mbxml.pyi  musicbrainz.pyi  util.pyi
typings/phrydy/: __init__.pyi  _version.pyi  doc_generator.pyi  field_docs.pyi  mediafile_extended.pyi
typings/tmep/: __init__.pyi  doc.pyi  format.pyi  functions.pyi  template.pyi
