[tool.poetry]
name = "audiorename"
version = "4.0.0"
description = "Rename audio files from metadata tags."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/Josef-Friedrich/audiorename"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.9,<=3.13"
phrydy = "^4"
tmep = "^2"
ansicolor = "^0"
musicbrainzngs = "^0"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
readme-patcher = "^0"
stdout-stderr-capturing = "^0"
tox = "^4"
ruff = "^0"
mypy = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
audiorenamer = "audiorename:execute"
