[project]
name = "audiorename"
version = "4.0.0"
description = "Rename audio files from metadata tags."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.9"
readme = "README.rst"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "phrydy>=4,<5",
    "tmep>=2,<3",
    "ansicolor>=0,<1",
    "musicbrainzngs>=0,<1",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/audiorename"

[project.scripts]
audiorenamer = "audiorename:execute"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "readme-patcher>=0,<1",
    "stdout-stderr-capturing>=0,<1",
    "ruff>=0,<1",
    "mypy>=1,<2",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
