[project]
name = "audiorename"
version = "4.0.0"
description = "Rename audio files from metadata tags."
authors = [{ name = "Josef Friedrich", email = "josef@friedrich.rocks" }]
requires-python = ">=3.10"
readme = "README.rst"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "ansicolor>=0.3.2",
    "musicbrainzngs>=0.7.1",
    "phrydy>=4.1.0",
    "tmep>=3.0.1",
]

[project.urls]
Repository = "https://github.com/Josef-Friedrich/audiorename"

[project.scripts]
audiorenamer = "audiorename:execute"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "stdout-stderr-capturing>=0.2.1",
]

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"
